# RoboLab

./: README.md  pyproject.toml  requirements.txt
analysis/: check_results.py  compile_results.py  deduplicate_error_logs.py  extract_initial_poses.py  read_results.py
analysis/droid_dataset/: droid_dataset_distribution.py
analysis/sensitivity_analysis/: posterior_inference.py
assets/backgrounds/_utils/: generate_background_table.py
assets/objects/_utils/: common.py  convert_usd_format.py  delete_usd.py  fix_vomp_objects.py  generate_catalog.py  generate_object_screenshots.py  generate_readme.py  scatter_objects.py  update_object_properties.py
assets/scenes/_utils/: chatgpt_multiview.py  compute_scene_statistics.py  generate_scene_metadata.py  generate_scene_readme_only.py  generate_scene_screenshots.py  settle_scenes.py  table_texture.py
docs/: dashboard.md  isaacsim6_isaaclab3_migration_plan.md
examples/: __init__.py  episodes.py  run_abs_ik_demo.py  run_empty.py  run_gripper_toggle.py  run_recorded.py  run_rel_ik_demo.py
examples/demo/: run_empty.py
robolab/: __init__.py  constants.py
robolab/core/environments/: __init__.py  base.py  config.py  env.py  factory.py  runtime.py
robolab/core/events/: basic_recorders.py  reset_camera.py  reset_pose.py  subtask_recorder.py  utils.py
robolab/core/export/: __init__.py  lerobot_exporter.py
robolab/core/logging/: recorder_manager.py  results.py  state_logging_interval.py  streaming_hdf5_handler.py
robolab/core/metrics/: __init__.py  compute_metrics.py  metrics_recorder.py  trajectory_metrics.py
robolab/core/observations/: example.py  observation_utils.py
robolab/core/scenes/: __init__.py  utils.py
robolab/core/sensors/: camera_utils.py  contact_sensor_utils.py
robolab/core/task/: conditionals.py  conditionals_state_machine.py  decorators.py  event_tracker.py  hull_check.py  predicate_logic.py  status.py  subtask.py  subtask_state_machine.py  subtask_utils.py  task.py  task_utils.py
robolab/core/utils/: adaptive_sampling.py  csv_utils.py  cv2_utils.py  debug_utils.py  file_utils.py  function_loader.py  geometry_utils.py  gym_utils.py  image_utils.py  params_utils.py  physics_utils.py  plot_utils.py  print_utils.py  render_utils.py  (+5 more)
robolab/eval/: __init__.py  base_client.py  episode.py  runner.py  summarize.py
robolab/robots/: delta_actions.py  droid.py  franka.py  franka_definitions.py  franka_high_pd.py
robolab/variations/: backgrounds.py  camera.py  lighting.py
robolab_policy_client/: runtime.py
scripts/: convert_to_lerobot.py  read_subtask_status_from_hdf5.py
(+153 files in other folders)
