# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "robolab"
version = "0.1.0"
description = "A benchmark for simulation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "Xuning Yang"}]
dependencies = [
    # Core
    "isaaclab[isaacsim]==3.0.0b2",
    "isaacsim[all,extscache]==6.0.0.1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "numpy",
    "gymnasium",
    # Remote inference
    "requests",
    "json_numpy",
    "pyzmq",
    "msgpack",
    "websockets",
    # Computer vision and image processing
    "opencv-python",
    "Pillow",
    "imageio",
    # Scientific computing
    "scipy",
    "matplotlib",
    # Data handling
    "h5py",
    "PyYAML",
    "pandas",
    # Misc
    "tqdm",
    "tyro",
    "python-dotenv",
    "setuptools<81",
    # Dashboard (robolab-dashboard CLI); kept in the default install since
    # the runtime footprint is small and most users want it available.
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
]

[project.optional-dependencies]
analysis = ["sbi"]
test = ["pytest"]
all = ["sbi", "pytest"]

[project.scripts]
robolab-dashboard = "dashboard.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["robolab", "robolab.*", "policies", "policies.*", "dashboard", "dashboard.*"]

[tool.setuptools.package-data]
dashboard = ["templates/*.html", "static/*"]

# -- uv configuration --

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
# warp-lang 1.13.0.dev20260418 on pypi.nvidia.com only published the macOS
# wheel, so any resolver pass that picked it would break `uv sync` on Linux.
# Exclude that specific version.
constraint-dependencies = ["warp-lang != 1.13.0.dev20260418"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["robolab", "policies"]
known-third-party = ["isaaclab", "isaaclab_assets", "isaaclab_mimic", "isaaclab_rl", "isaaclab_tasks"]
